--- a/pages/tab/activity/submit/submit.wxml
+++ b/pages/tab/activity/submit/submit.wxml
@@ -1,7 +1,16 @@
-<!--pages/tab/activity/submit/submit.wxml-->
+<!-- pages/tab/activity/submit/submit.wxml -->
 <view class='container'>
-  <text>person information</text>
-
+  <view class="resultTitle">请核对您选择的活动信息</view>
+  <view class="result">
+    <view class="baseinf">
+      <view class="text">{{'学号：' + userDetail.userId}}</view>
+      <view class="text">{{'姓名：' + userDetail.username}}</view>
+      <view class="text" wx:if="{{userDetail.sex == 0}}">性别：女</view>
+      <view class="text" wx:elif="{{userDetail.sex == 1}}">性别：男</view>
+      <view class="text">{{'学院：' + userDetail.collegeName}}</view>
+      <view class="text">{{'班级：' + userDetail.className}}</view>
+    </view>
+  </view>
   <view class="cells">
     <navigator class="item" hover-class='background-color: #fff;' wx:for="{{commitData}}" wx:key="id" url="../detail/detail?item={{item.id}}">
       <image src="{{item.images[0]}}" mode="aspectFill" class='headimg' />
@@ -15,7 +24,10 @@
       <image wx:else src='/images/activity/sub.png' class='addsub' catchtap='subActivity' data-item="{{item}}" data-index="{{index}}" />
     </navigator>
     <view wx:if="{{commitData.length == 0}}" class='contentEmpty'>你还未选择活动</view>
-
+    <view wx:else class="my-bar">
+      <button bindtap='submitActivity' type="primary" size='default' class="submitButton">
+        <text>提  交</text>
+      </button>
+    </view>
   </view>
-  
 </view>
