新增提交搜索

--- a/includes/search-bar.wxml
+++ b/includes/search-bar.wxml
@@ -2,7 +2,7 @@
   <view class="weui-search-bar__form">
     <view class="weui-search-bar__box">
       <icon class="weui-icon-search_in-box" type="search" size="14"/>
-      <input type="text" class="weui-search-bar__input" placeholder="搜索" confirm-type="search" value="{{searchText}}" focus="{{searchShowed}}" bindinput="searchChangeHandle" bindconfirm="searchHandle"/>
+      <input type="text" class="weui-search-bar__input" placeholder="搜索" confirm-type="search" value="{{searchText}}" focus="{{searchShowed}}" bindinput="searchChangeHandle" bindconfirm="searchHandle" bindblur="loseFocusHandle" bindfocus="getFocusHandle" />
       <view class="weui-icon-clear" wx:if="{{searchText}}" bindtap="clearSearchHandle">
         <icon type="clear" size="14"/>
       </view>
