--- a/pages/tab/search/searchResult/searchResult.wxss
+++ b/pages/tab/search/searchResult/searchResult.wxss
@@ -1,1 +1,81 @@
 /* pages/tab/search/searchResult/searchResult.wxss */
+
+.container {
+    background-color: #f6f6f6;
+    padding: 0;
+}
+
+.grids {
+    display: flex;
+    flex-wrap: wrap;
+}
+
+.grids .item {
+    background-color: #fff;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    width: 100%;
+    height: 160rpx;
+    margin-top: 20rpx;
+    margin-left: 20rpx;
+    margin-right: 20rpx;
+    /* border: 1rpx solid rgb(0, 0, 0); */
+    border-radius: 50rpx;
+    box-sizing: border-box;
+    opacity: 0.8;
+}
+
+.grids .item image {
+    width: 70rpx;
+    height: 70rpx;
+}
+
+.grids .item text {
+    /* float: left; */
+    color: #000000;
+    font-size: 30rpx;
+}
+
+/**user-info**/
+
+.user-info-box {
+    margin-bottom: 20rpx;
+    background-color: #fff;
+}
+
+.user-info {
+    flex-direction: column;
+    margin: 30rpx 0 -1px;
+    padding: 25rpx 30rpx 20rpx;
+}
+
+.info-hd {
+    display: flex;
+    align-items: center;
+}
+
+.user-avatar {
+    width: 120rpx;
+    height: 120rpx;
+    border-radius: 5px;
+}
+
+.user-title {
+    flex: 1;
+    display: flex;
+    flex-direction: column;
+    padding-left: 25rpx;
+}
+
+.user-name {
+    font-size: 16pt;
+    line-height: 160%;
+    letter-spacing: 1px;
+}
+
+.user-id {
+    font-size: 11pt;
+    color: #8b8b8b;
+}
